--- a/final/pages/annotation.tex
+++ b/final/pages/annotation.tex
@@ -6,10 +6,12 @@ Some text
 
 \section*{\foreignlanguage{russian}{Аннотация}}
 \foreignlanguage{russian}{
-	Текст на русском
+	Технология контейнерной виртуализации прочно заняла лидирующее место в современных практиках разработки и эксплуатации приложений. Сочетание экономии ресурсов и скорости работы делают эту технологию привлекательной для программной индустрии. Однако с распространением контейнеризации вопросы безопасности встают всё более остро.
+
+	В данной работе будут рассмотрены вопросы усиления \linebreak безопасности контейнеризованных приложений. В частности, будет рассмотрена \linebreak архитектура современных решений в области контейнерной виртуализации и их \linebreak безопасность. Будут проанализированы актуальные уязвимости и атаки (такие как побег из контейнера) и причины появления данных уязвимостей. Особое внимание будет уделено исследованию механизмов защиты, которые позволяют усилить \linebreak безопасность контейнеризованных приложений, а также способам \linebreak автоматизированного обнаружения и предотвращения данных уязвимостей.
 }
 
 \section*{Keywords}
-Keyword
+Docker, Clair, Docker Vulnerability Scanner, Trivy, Container Escape, Container Security.
 
 \pagebreak
