--- a/final/bibpage.tex
+++ b/final/bibpage.tex
@@ -1,6 +1,5 @@
-% \newpage
-\bibliographystyle{unsrt}
-\renewcommand*\refname{Список использованных источников}
-% \nocite{*}
+\phantomsection
+\addcontentsline{toc}{section}{References}
+\normalem
+\bibliographystyle{IEEEtran}
 \bibliography{refs}
-\addcontentsline{toc}{section}{Список использованных источников}
