--- a/final/introduction.tex
+++ b/final/introduction.tex
@@ -1,1 +1,8 @@
 \section{Introduction}
+
+The concept of containerization traces its origins back to 1979, when the chroot syscall was initially added to Version 7 Unix \cite{1}. Containerization significantly increased in popularity since 2013, when Docker began to dominate the market, and now containers play an essential role in modern software development and distribution practices. Since the technology has become widespread, the security concerns became more evident. As a result, numerous vulnerabilities particularly related to containerized applications were discovered within the popular platforms, and various defensive mechanisms were proposed to address them.
+
+The objective of this paper is to ....
+
+The rest of the work is organised in the following way. 
+
