--- a/final/main.tex
+++ b/final/main.tex
@@ -13,8 +13,11 @@
 \include{pages/tocpage}
 \include{pages/annotation}
 \include{introduction}
-\include{content}
-% \include{bibpage}
-% \include{pages/appendix}
+\include{theory}
+\include{hardening}
+\include{scanners}
+\include{conclusion}
+\include{bibpage}
+\include{pages/appendix}
 
 \end{document}
