--- a/final/pages/annotation.tex
+++ b/final/pages/annotation.tex
@@ -2,7 +2,10 @@
 \section*{Annotation}
 \addcontentsline{toc}{section}{Annotation}
 
-Some text
+Container virtualization plays a significant role in modern software development practices. The combination of reduced overhead and faster startup time makes this technology advantageous for the industry. However, the growing adoption of containers raises concerns regarding the security of container solutions.
+
+This study examines the issues of security hardening of containerized applications including an analysis of recent container architectures and their security aspects. Actual vulnerabilities and attacks such as container escapes will be discussed. Special attention will also be paid to hardening techniques that provide additional security as well as tools for automated detection and prevention of vulnerabilities.
+
 
 \section*{\foreignlanguage{russian}{Аннотация}}
 \foreignlanguage{russian}{
