--- a/final/pages/appendix.tex
+++ b/final/pages/appendix.tex
@@ -1,4 +1,16 @@
-% \section*{Приложение A. Код encode.py}
+\appendix
+
+\section{Clair docker-compose.yaml} \label{appendix:clair-compose}
+
+\begin{listing}[htp]
+    \centering
+    \begin{minipage}{\linewidth}
+    \inputminted[linenos=true, tabsize=4]{csharp}{assets/scanners/clair_compose.yaml}
+    \end{minipage}
+\end{listing}
+
+
+% \section*{A. Clair docker-compose.yaml}
 % \addcontentsline{toc}{section}{Приложение A. Код encode.py} 
 % \lstinputlisting[language={python}]{Listings/encode.py}
 % \newpage
