--- a/final/refs.bib
+++ b/final/refs.bib
@@ -1,41 +1,72 @@
-# https://www.bibme.org/apa
+@misc{1,
+  author = {Rani Osnat},
+  title  = {A Brief History of Containers: From the 1970s Till Now},
+  note   = {\textit{aquasec.com}, Jan. 10, 2020},
+  url    = {{\url{https://www.aquasec.com/blog/a-brief-history-of-containers-from-1970s-chroot-to-docker-2016}. [Accessed: Apr. 23, 2024]}}
+}
 
-@book{Rice_2020,
-  place     = {Sebastopol, CA},
-  title     = {Container security: Fundamental technology concepts that protect containerized applications},
+@article{arxiv:1,
+  author  = {Omar Javed and Salman Toor},
+  title   = {Understanding the Quality of Container Security Vulnerability Detection Tools},
+  journal = {CoRR},
+  volume  = {abs/2101.03844},
+  year    = {2021},
+  url     = {\url{https://arxiv.org/abs/2101.03844}}
+}
+
+@book{b:rice,
+  author    = {Liz Rice},
   publisher = {O'Reilly Media},
-  author    = {Rice, Liz},
+  title     = {Container security: Fundamental technology concepts that protect containerized applications},
   year      = {2020}
 }
 
- @misc{agreement,
-  howpublished = {\url{https://learn.microsoft.com/en-us/cpp/build/x64-calling-convention?view=msvc-170}},
-  url          = {https://learn.microsoft.com/en-us/cpp/build/x64-calling-convention?view=msvc-170},
-  title        = {x64 calling convention},
-  publisher    = {Microsoft},
-  author       = {Microsoft}
-} 
+@inproceedings{c:1,
+  author    = {Yang, Nan and Chen, Cen and Yuan, Tao and Wang, Yujie and Gu, Xiaofan and Yang, Dan},
+  booktitle = {2022 International Conference on Cyber-Enabled Distributed Computing and Knowledge Discovery (CyberC)},
+  title     = {Security hardening solution for docker container},
+  year      = {2022},
+  volume    = {},
+  number    = {},
+  pages     = {252-257},
+  doi       = {10.1109/CyberC55534.2022.00049}
+}
 
- @misc{cli,
-  howpublished = {\url{https://learn.microsoft.com/en-us/cpp/build/walkthrough-compile-a-c-program-on-the-command-line?view=msvc-170}},
-  url          = {https://learn.microsoft.com/en-us/cpp/build/walkthrough-compile-a-c-program-on-the-command-line?view=msvc-170},
-  title        = {Walkthrough: Compile a C program on the command line},
-  publisher    = {Microsoft},
-  author       = {Microsoft}
-} 
+@inproceedings{c:2,
+  author    = {Brady, Kelly and Moon, Seung and Nguyen, Tuan and Coffman, Joel},
+  booktitle = {2020 10th Annual Computing and Communication Workshop and Conference (CCWC)},
+  title     = {Docker Container Security in Cloud Computing},
+  year      = {2020},
+  volume    = {},
+  number    = {},
+  pages     = {0975-0980},
+  doi       = {10.1109/CCWC47524.2020.9031195}
+}
 
- @misc{atnt,
-  howpublished = {\url{https://csiflabs.cs.ucdavis.edu/~ssdavis/50/att-syntax.htm}},
-  url          = {https://csiflabs.cs.ucdavis.edu/~ssdavis/50/att-syntax.htm},
-  title        = {AT\&T Assembly Syntax},
-  publisher    = {vivek},
-  author       = {vivek}
-} 
+@misc{d:dockersecurity,
+  author = {},
+  title  = {Docker security},
+  note   = {\textit{docs.docker.com}, Feb. 21, 2024},
+  url    = {{\url{https://docs.docker.com/engine/security}. [Accessed: Apr. 24, 2024]}}
+}
 
- @misc{atnt2,
-  howpublished = {\url{https://flint.cs.yale.edu/cs421/papers/x86-asm/asm.html}},
-  url          = {https://flint.cs.yale.edu/cs421/papers/x86-asm/asm.html},
-  title        = {x86 Assembly Guide},
-  publisher    = {Yale University},
-  author       = {Yale University}
-} 
+@misc{m:cgroups,
+  author = {},
+  title  = {cgroups(7) — Linux manual page},
+  note   = {\textit{man7.org}, Dec. 22, 2023},
+  url    = {{\url{https://man7.org/linux/man-pages/man7/cgroups.7.html}. [Accessed: Apr. 23, 2024]}}
+}
+
+@misc{m:namespaces,
+  author = {},
+  title  = {namespaces(7) — Linux manual page},
+  note   = {\textit{man7.org}, Dec. 22, 2023},
+  url    = {{\url{https://man7.org/linux/man-pages/man7/namespaces.7.html}. [Accessed: Apr. 23, 2024]}}
+}
+
+@misc{s:namespaces,
+  author = {Michael Kerrisk},
+  title  = {Namespaces in operation, part 1: namespaces overview},
+  note   = {\textit{lwn.net}, Jan. 4, 2013},
+  url    = {{\url{https://lwn.net/Articles/531114}. [Accessed: Apr. 24, 2024]}}
+}
