--- a/final/settings/format.tex
+++ b/final/settings/format.tex
@@ -31,7 +31,8 @@
 \usepackage[section]{placeins}
 \captionsetup[figure]{labelformat=simple, labelsep=endash, justification=centering, belowskip=-1.4em}
 \captionsetup[table]{labelsep=endash, justification=raggedright, singlelinecheck=off}
-\captionsetup[lstlisting]{labelformat=simple, labelsep=endash, font=sf}
+\captionsetup[lstlisting]{labelformat=simple, labelsep=endash}
+\captionsetup[listing]{labelformat=simple, labelsep=endash}
 
 % \setlength{\intextsep}{12pt plus 0pt minus 0pt}
 
