--- a/final/settings/packages.tex
+++ b/final/settings/packages.tex
@@ -1,6 +1,8 @@
 \usepackage{polyglossia} % языковой пакет
 \usepackage{tocvsec2} 
-\usepackage{longtable,booktabs,array}
+\usepackage{longtable}
+\usepackage{booktabs}
+\usepackage{array}
 \usepackage{calc}
 \usepackage{ulem}
 \usepackage{setspace}
@@ -32,3 +34,14 @@
 \usepackage{indentfirst} % пакет для отступа абзаца
 \usepackage{chngcntr} % пакет подписей и нумерации рисунков
 \usepackage{float} % пакет подписей и нумерации рисунков
+
+\usepackage{listings}
+\usepackage{minted}
+\usemintedstyle{tango}
+\renewcommand\theFancyVerbLine{\normalsize\arabic{FancyVerbLine}}
+
+\usepackage{cite}
+
+% \usepackage[style=ieee, backend=bibtex]{biblatex}
+% \addbibresource{refs.bib}
+
